--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
                   <nav class="navbar navbar-inverse navbar-static-top">
                         <div class="container">
 
-
-                              <!-- Brand and toggle get grouped for better mobile display -->
                               <div class="navbar-header">
                                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                                           data-target="#navbar-top" aria-expanded="false">
@@ -44,8 +42,8 @@
                                     </button>
                               </div>
 
-                              <div class="collapse navbar-collapse" id="navbar top">
-                                    <ul class="nav navbar-nav">
+                              <div class="collapse navbar-collapse" id="navbar-top">
+                                    <ul class="nav navbar-nav navbar-left">
                                           <li class="active"><a href="#">Главная</a></li>
                                           <li><a href="#">Фильмы</a></li>
                                           <li><a href="#">Сериалы</a></li>
@@ -54,11 +52,11 @@
 
                                     <ul class="nav navbar-nav navbar-right">
                                           <li><a href="#">Новинки</a></li>
-                                          <li><a href="#">Рейтинги</a></li>
+                                          <li><a href="#">Рейтинг</a></li>
                                           <li><a href="#">Раздачи</a></li>
                                     </ul>
-                              </div><!-- /.navbar-collapse -->
-                        </div><!-- /.container-fluid -->
+                              </div>
+                        </div>
                   </nav>
             </div>
       </header>
